--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 cycler==0.10.0
+dateparser==1.0.0
 kiwisolver==1.3.1
 lxml==4.6.2
 matplotlib==3.2.0
@@ -6,6 +7,9 @@ numpy==1.20.1
 Pillow==8.1.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
+pytz==2021.1
+regex==2020.11.13
 selenium==3.141.0
 six==1.15.0
+tzlocal==2.1
 urllib3==1.26.3
